version/0.12/_sources/api/solver/_autosummary/settings/source_terms_1.rst.txt
:orphan:

.. _source_terms_1:

source_terms
============

.. currentmodule:: ansys.fluent.core.solver.settings_231.source_terms_1

.. autoclass:: source_terms
    :show-inheritance:
    :undoc-members:
.. rubric:: Named object type

:ref:`source_terms_child <source_terms_child>`


.. rubric:: Included in:

==================================   =================================

Parent                                                         Summary

==================================   =================================
:ref:`fluid_child <fluid_child_1>`       'child_object_type' of fluid.

:ref:`phase_child <phase_child>`         'child_object_type' of phase.

:ref:`solid_child <solid_child_1>`       'child_object_type' of solid.

:ref:`phase_child <phase_child_1>`       'child_object_type' of phase.

==================================   =================================

